fix: update accent colors for improved visibility and consistency

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -78,8 +78,8 @@ html {
   --secondary-foreground: oklch(0.9551 0 0);
   --muted: oklch(0.2940 0.0130 272.9312);
   --muted-foreground: oklch(0.7058 0 0);
-  --accent: oklch(0.1932 0.1010 303.7354);
-  --accent-foreground: oklch(0.9391 0.0369 306.4152);
+  --accent: oklch(0.3787 0.2015 300.5734);
+  --accent-foreground: oklch(1.0000 0 0);
   --destructive: oklch(0.7106 0.1661 22.2162);
   --destructive-foreground: oklch(1.0000 0 0);
   --border: oklch(0.3289 0.0092 268.3843);
